--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "chart.js": "^4.5.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-render-markup": "^3.6.3",
